--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
             <div class="member">
                 <img src="img/Our-team/member6.png" alt="member6">
-                <h4>Wagner Caberra, Idana Noely</h4>
+                <h4>Wagner Cabrera, Idana Noely</h4>
                 <p>&lt;Quality Assurance Tester&gt;</p>
             </div>
             <h3>OUR<br>TEAM</h3>
@@ -192,7 +192,7 @@
         <h4>Grosso, M Alejandro</h4>
         <h4>Huck, Gabriel</h4>
         <h4>Lopez, Julieta Anahi</h4>
-        <h4>Wagner Caberra, Idana Noely</h4>
+        <h4>Wagner Cabrera, Idana Noely</h4>
     </footer>
 </body>
 </html>
